--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -1,41 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:theme="@style/CustomTheme"
     tools:context=".RecipeListActivity">
 
-
-
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/recipe_list"
-        android:textSize="24sp" />
-
-    <ListView
-        android:id="@+id/listViewRecipes"
-        android:layout_width="410dp"
-        android:layout_height="646dp"
-        android:layout_below="@id/textViewTitle"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:scrollbars="vertical"
         android:layout_marginTop="16dp"/>
 
-    <Button
+
+
+
+<Button
         android:id="@+id/buttonBackToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backToMainMenu"
         android:text="@string/main" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
 
 
 </RelativeLayout>
