--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -62,9 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backToMainMenu"
-        android:text="@string/main"
-
-    />
+        android:text="@string/main" />
 
 
 </RelativeLayout>
