--- a/app/src/main/res/layout/activity_share_with_family.xml
+++ b/app/src/main/res/layout/activity_share_with_family.xml
@@ -8,6 +8,7 @@
     tools:context=".ShareWithFamilyActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
@@ -24,8 +25,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFamilyMembers"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="375dp"
+        android:layout_height="584dp"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="22dp" />
 
     <include layout="@layout/list_item_family_member" />
 
